--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,21 @@
 				</configuration>
 			</plugin>
 			<!-- WAR Overlay -->
+			<!-- JRebel -->
+			<plugin>
+				<groupId>org.zeroturnaround</groupId>
+				<artifactId>jrebel-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>generate-rebel-xml</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- JRebel -->
 		</plugins>
 	</build>
 	<dependencies>
